--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/plugin-transform-private-property-in-object": "^7.24.1",
 		"sass": "^1.72.0",
 		"sass-loader": "^14.1.1"
 	}
