--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"react-scripts": "5.0.1",
 		"react-slick": "^0.30.2",
 		"slick-carousel": "^1.8.1",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"zustand": "^4.5.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -42,7 +43,6 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/plugin-transform-private-property-in-object": "^7.24.1",
 		"sass": "^1.72.0",
 		"sass-loader": "^14.1.1"
 	}
